5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1674_1107.log
== TEST (2019-04-29 21:28:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite o dia após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if
-- ERROR:
File "XXXX", line 12
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:28:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite o dia após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if
-- ERROR:
File "XXXX", line 12
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:28:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite o dia após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if
-- ERROR:
File "XXXX", line 12
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:33:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
		if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- ERROR:
File "XXXX", line 28
    if(c==0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:33:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
		if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- ERROR:
File "XXXX", line 28
    if(c==0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:33:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:34:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:34:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias após hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:34:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:35:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:35:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:36:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:36:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
#elif(a==2):
print(a,b,c)	
-- OUTPUT:
9 9 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:49:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==2):
	a = "terca"
		if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==3):
	a = "quarta"
		if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==4):
	a = "quinta"
		if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a == 5):
	a = "sexta"
		if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a == 6):
	a = "sabado"
		if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
else:
	print("A entrada",a," eh invalida")
-- ERROR:
File "XXXX", line 46
    if(c==0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:50:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:50:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,b)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:51:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:51:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:51:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:53:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("digite o numero do dia de hj na semana: "))
b = int(input("digite de dias apos hj: "))

x = "Hoje eh "
y = " e o dia futuro eh "
c = (a + b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif (a==1):
	a = "segunda"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==2):
	a = "terca"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==3):
	a = "quarta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a==4):
	a = "quinta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 5):
	a = "sexta"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
elif(a == 6):
	a = "sabado"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
	print(x,a,y,c)
else:
	print("A entrada",a," eh invalida")
-- EXECUTION TIME:
0.164589
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh  sabado  e o dia futuro eh  segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
